--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link ref="index.css" type="text/css" rel="stylesheet">
+  <link href="index.css" type="text/css" rel="stylesheet">
   </head>
 <title> Mission to Mars </title>
 <body>
