--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="index.css" type="text/css" rel="stylesheet">
+  <link href=
+  "/users/katherinecollins/github/kacollins1315.github.io/index.css" 
+  type="text/css" rel="stylesheet">
   </head>
 <title> Mission to Mars </title>
 <body>
