--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href=
-  "/users/katherinecollins/github/kacollins1315.github.io/index.css"
-  type="text/css" rel="stylesheet">
+  <link href="style.css" type="text/css" rel="stylesheet">
   </head>
-<title> Mission to Mars </title>
+<title> Katie </title>
 <body>
-<h1> Welcome To Mission to Mars </h1>
+<h1> hi</h1>
 
 </body>
-<p> 
+<p>
+</p>
+</html>
