--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 <h1> hi</h1>
 
 </body>
-<p>
-</p>
+
+  <ol>
+    <li> Snacks </li>
+    <li>Dinner </li>
+    <li> Lunch </li>
+  </ol>
+<div class="food">
+  <p> Sometimes I like to eat pizza. Other times I like to eat bread,
+    still other times I enjoy eating fruits and vegetables. </p>
+  </div>
+  </p>
+
 </html>
