--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
 <h1> hi</h1>
 
 </body>
-
-  <ol>
-    <li> Snacks </li>
-    <li>Dinner </li>
-    <li> Lunch </li>
-  </ol>
-<div class="food">
-  <p> Sometimes I like to eat pizza. Other times I like to eat bread,
-    still other times I enjoy eating fruits and vegetables. </p>
+  <div class="food">
+    <ul>
+      <li> Snacks </li>
+      <li>Dinner </li>
+      <li> Lunch </li>
+    </ul>
   </div>
-  </p>
+  <div class="food">
+    <p> Sometimes I like to eat pizza. Other times I like to eat bread,
+    still other times I enjoy eating fruits and vegetables. </p>
+    </p>
+  </div>
 
 </html>
