--- a/index.html
+++ b/index.html
@@ -2,22 +2,24 @@
 <html>
 <head>
   <link href="style.css" type="text/css" rel="stylesheet">
-  </head>
-<title> Katie </title>
+</head>
+<title> Cinna </title>
 <body>
-<h1> Food for Thought</h1>
+<h1> Cinna</h1>
+<h3>The Dog Who Lived</h3>
 
 </body>
   <div class="food">
     <ul>
-      <li> Snacks </li>
-      <li>Dinner </li>
-      <li> Lunch </li>
+      <li> Early Life </li>m
+      <li>Adulthood </li>
     </ul>
   </div>
-  <div class="food">
-    <p> Sometimes I like to eat pizza. Other times I like to eat bread,
-    still other times I enjoy eating fruits and vegetables. </p>
+
+  <div class="monologue">
+    <p> Welcome. This page is dedicated to me. Cinna. The dog who lived.
+    I am not your average Shiba Inu. I am the best Shiba Inu. Actually,
+    it can be argued that I am the best dog in the world, period.</p>
     </p>
   </div>
 
