--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </body>
   <div class="food">
     <ul>
-      <li> Early Life </li>m
+      <li> Early Life </li>
       <li>Adulthood </li>
     </ul>
   </div>
