--- a/index.html
+++ b/index.html
@@ -2,14 +2,25 @@
 <html>
 <head>
   <link href="style.css" type="text/css" rel="stylesheet">
+  <meta charset="utf-8">
+  <title> Cinna </title>
 </head>
-<title> Cinna </title>
+
 <body>
-<h1> Cinna</h1>
+<h1> Cinna
+
+
+
+
+
+
+
+
+</h1>
 <h3>The Dog Who Lived</h3>
 
 </body>
-  <div class="food">
+  <div >
     <ul>
       <li> Early Life </li>
       <li>Adulthood </li>
@@ -19,7 +30,14 @@
   <div class="monologue">
     <p> Welcome. This page is dedicated to me. Cinna. The dog who lived.
     I am not your average Shiba Inu. I am the best Shiba Inu. Actually,
-    it can be argued that I am the best dog in the world, period.</p>
+    it can be argued that I am the best dog in the world, period.
+
+
+
+
+
+
+  </p>
   </div>
 
 </html>
