--- a/index.html
+++ b/index.html
@@ -26,18 +26,16 @@
       <li>Adulthood </li>
     </ul>
   </div>
-
+<div class="jumbotron">
+  <div class="container">
   <div class="monologue">
     <p> Welcome. This page is dedicated to me. Cinna. The dog who lived.
     I am not your average Shiba Inu. I am the best Shiba Inu. Actually,
     it can be argued that I am the best dog in the world, period.
-
-
-
-
-
-
   </p>
+  
   </div>
+</div>
+</div>
 
 </html>
