--- a/index.html
+++ b/index.html
@@ -7,16 +7,7 @@
 </head>
 
 <body>
-<h1> Cinna
-
-
-
-
-
-
-
-
-</h1>
+<h1> Cinna</h1>
 <h3>The Dog Who Lived</h3>
 
 </body>
@@ -33,7 +24,7 @@
     I am not your average Shiba Inu. I am the best Shiba Inu. Actually,
     it can be argued that I am the best dog in the world, period.
   </p>
-  
+
   </div>
 </div>
 </div>
