--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
   <meta charset="utf-8">
   <title> Cinna </title>
 </head>
+<header class="container">
 
+  <div class="row">
+   <h1 class="col-sm-4">Cinna</h1>
+   <nav class="col-sm-8 text-right">
+    <p>Puppyhood</p>
+    <p>Adulthood</p>
+    <p>Sister</p>
+   </nav>
+ </div>
+</header>
 <body>
+
 <h1> Cinna</h1>
 <h3>The Dog Who Lived</h3>
 
