--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
   <title> Cinna </title>
 </head>
 <header class="container">
-
   <div class="row">
-   <h1 class="col-sm-4">Cinna</h1>
-   <nav class="col-sm-8 text-right">
+   <h1 class="col-sm-4"> navigation</h1>
+   <nav class="col-sm-8 text-center">
     <p>Puppyhood</p>
     <p>Adulthood</p>
     <p>Sister</p>
@@ -18,7 +17,7 @@
 </header>
 <body>
 
-<h1> Cinna</h1>
+<h1 class="title"> Cinna</h1>
 <h3>The Dog Who Lived</h3>
 
 </body>
